test/libsolidity/syntaxTests/modifiers/illegal_modifier_override.sol
contract A { modifier mod(uint a) { _; } }
contract B is A { modifier mod(uint8 a) { _; } }
// ----
// TypeError: (61-89): Override changes modifier signature.
